Fix admin login align

--- a/public/css/admin/common.css
+++ b/public/css/admin/common.css
@@ -183,7 +183,7 @@ body {
 
 .login {
     position: absolute;
-    top: 40%;
+    top: 25%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-50%);
 }
